// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`a clipped paths and another one containing one more clipped path and another one and then the other is recreated, starting from the first then the recreation should contain the difference 1`] = `
Array [
  "context.lineTo(0,1)",
  "context.beginPath()",
  "context.fillStyle = \\"#f00\\"",
  "context.moveTo(1,1)",
]
`;

exports[`a clipped paths and another one containing one more clipped path and another one, still based on the same path and then the other is recreated, starting from the first then the recreation should contain the difference 1`] = `
Array [
  "context.lineTo(0,1)",
  "context.lineTo(0,0)",
]
`;

exports[`a clipped paths and another one containing one more clipped path and then the other is recreated, starting from the first then the recreation should contain the difference 1`] = `
Array [
  "context.lineTo(0,1)",
]
`;
